--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -23,20 +23,13 @@
 
   <!-- Add your site or application content here -->
 
-
-
   <style>
-    body,
-    html {
-      height: 100%;
-    }
-
     .parallax {
       /* The image used */
       background-image: url('space_background.jpg');
 
       /* Full height */
-      height: 100%;
+      height: 50%;
 
       /* Create the parallax scrolling effect */
       background-attachment: fixed;
@@ -45,7 +38,7 @@
       background-size: cover;
     }
 
-    .different {
+    .parallax2 {
       background-image: url('space_background2.jpg');
       height: 100%;
       background-attachment: fixed;
@@ -54,68 +47,41 @@
       background-size: cover;
     }
 
-
-    html {
-      background-color: black
+    .parallax3 {
+      background-image: url('space_background.jpg');
+      height: 20%;
+      background-attachment: fixed;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
     }
 
-    h1 {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      font-size: 40px;
-      text-align: center;
-      color: white
-    }
-
-    p {
-      color: white;
-      background-color: black;
-      padding: 400px 300px 400px 300px;
-    }
-
-    header nav {
-      display: table;
-      width: 100%;
-      border: 6px solid white;
-      padding: 10px;
-    }
-
-    header nav ul {
-      display: table-row;
-      list-style-type: none;
-
-    }
-
-    header nav ul li {
-      display: table-cell;
-      text-align: center;
-      /* border: 2px solid white; */
-    }
-
-    nav ul li a {
-      color: white;
-      text-decoration: none;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      padding: 3px 80px 3px 3px;
-      font-weight: bold;
-      ;
-    }
-
-    nav ul li a:hover {
-      color: cyan;
+    .parallax4 {
+      background-image: url('space_background.jpg');
+      height: 20%;
+      background-attachment: fixed;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
     }
   </style>
 
   <header>
     <nav>
       <ul>
-        <li><a href="index.html">Link</a></li>
-        <li><a href="index.html">Link</a></li>
-        <li><a href="index.html">Link</a></li>
+        <li><a href="index.html">About Me</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html">Experience</a></li>
       </ul>
     </nav>
   </header>
 
-  <div class="parallax"></div>
+  <div class="parallax3"></div>
+
+  <h1>Dylan J. Kelley</h1>
+
+  <div class="parallax4"></div>
+
   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam temporibus ducimus error harum! Optio adipisci
     excepturi porro illo odio maxime, iure quibusdam, placeat velit explicabo necessitatibus suscipit, quaerat aperiam
     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis error eveniet possimus in consequuntur totam,
@@ -130,8 +96,9 @@
     elit. Voluptate dolores dicta, quidem tempore quo voluptas quod, dolor odio delectus provident aliquid debitis
     laboriosam adipisci deserunt necessitatibus illo dolorem mollitia autem! Lorem ipsum dolor sit amet, consectetur
     adipisicing elit. Incidunt repellat delectus, perferendis porro accusantium labore enim placeat? Perferendis ipsum
-    molestias necessitatibus dicta totam facere amet beatae dolor voluptate, doloremque non.</p>
-  <div class="different"></div>
+    molestias necessitatibus dicta totam facere amet beatae dolor voluptate, doloremque non.
+  </p>
+  <div class="parallax"></div>
 
   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde, voluptatibus dicta omnis voluptates a harum aut
     pariatur numquam. Inventore animi obcaecati minus explicabo laboriosam? Ut modi accusamus dignissimos voluptatum
@@ -148,6 +115,7 @@
     velit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Id ducimus sunt distinctio facilis quos accusamus,
     ullam illo dolorum harum consectetur nisi unde aperiam doloremque! Quibusdam quasi ducimus unde placeat mollitia.
   </p>
+  <div class="parallax2"></div>
 
   <!-- Scripts -->
 
