--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -24,49 +25,14 @@
   <!-- Add your site or application content here -->
 
   <style>
-    .parallax {
-      /* The image used */
-      background-image: url('space_background.jpg');
-
-      /* Full height */
-      height: 50%;
-
-      /* Create the parallax scrolling effect */
+    html {
+      background-image: url(space_background.jpg);
       background-attachment: fixed;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-    }
-
-    .parallax2 {
-      background-image: url('space_background2.jpg');
-      height: 100%;
-      background-attachment: fixed;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-    }
-
-    .parallax3 {
-      background-image: url('space_background.jpg');
-      height: 20%;
-      background-attachment: fixed;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-    }
-
-    .parallax4 {
-      background-image: url('space_background.jpg');
-      height: 20%;
-      background-attachment: fixed;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
+      background-size: 100%;
     }
   </style>
 
-  <header>
+  <!-- <header>
     <nav>
       <ul>
         <li><a href="index.html">About Me</a></li>
@@ -74,48 +40,60 @@
         <li><a href="index.html">Experience</a></li>
       </ul>
     </nav>
-  </header>
+  </header> -->
 
-  <div class="parallax3"></div>
+  <h1 id="name">Dylan J. Kelley</h1>
 
-  <h1>Dylan J. Kelley</h1>
+  <h2>Personal Profile</h2>
 
-  <div class="parallax4"></div>
-
-  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam temporibus ducimus error harum! Optio adipisci
-    excepturi porro illo odio maxime, iure quibusdam, placeat velit explicabo necessitatibus suscipit, quaerat aperiam
-    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis error eveniet possimus in consequuntur totam,
-    perferendis, quo blanditiis consectetur qui quos perspiciatis repudiandae cum iste nihil odio repellat eos
-    expedita! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet praesentium, vero et vel dolores
-    explicabo ratione officia tempora molestias sint assumenda recusandae quis. Nulla perspiciatis expedita corrupti
-    molestiae accusamus animi. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, laboriosam. Dolor
-    consectetur ipsa, corrupti obcaecati cupiditate voluptatem nam temporibus ipsam fugit facilis illo, beatae
-    praesentium ducimus qui vitae placeat assumenda!Lorem Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-    Pariatur rem obcaecati cum nostrum nam, provident, ducimus blanditiis mollitia laboriosam beatae earum. Similique,
-    a magnam laboriosam asperiores provident hic dolorem assumenda? Lorem ipsum dolor, sit amet consectetur adipisicing
-    elit. Voluptate dolores dicta, quidem tempore quo voluptas quod, dolor odio delectus provident aliquid debitis
-    laboriosam adipisci deserunt necessitatibus illo dolorem mollitia autem! Lorem ipsum dolor sit amet, consectetur
-    adipisicing elit. Incidunt repellat delectus, perferendis porro accusantium labore enim placeat? Perferendis ipsum
-    molestias necessitatibus dicta totam facere amet beatae dolor voluptate, doloremque non.
+  <p>
+    Hardworking, methodical first year Coding student who is able to push through problems to find a solution and able
+    to talk and get along with various different people. Seeking the position of Web Developer.
   </p>
-  <div class="parallax"></div>
 
-  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde, voluptatibus dicta omnis voluptates a harum aut
-    pariatur numquam. Inventore animi obcaecati minus explicabo laboriosam? Ut modi accusamus dignissimos voluptatum
-    nisi? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius culpa molestiae corrupti ducimus, nam soluta
-    odio. Quas, exercitationem repudiandae nulla aspernatur culpa itaque modi asperiores doloribus esse sit placeat
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam recusandae error debitis alias asperiores? Aperiam
-    voluptate similique, fuga voluptates soluta labore est dolores, praesentium minus inventore, omnis nostrum corporis
-    voluptatum. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem delectus esse, nam quia aut
-    consectetur magnam similique voluptate. Natus inventore magnam expedita ad possimus laudantium fugit eius culpa
-    quaerat error? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo quis, repellat voluptatum, quaerat
-    mollitia optio obcaecati iste ex porro facilis ratione qui perferendis non. Exercitationem ratione commodi neque
-    maxime odit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab aliquid, tenetur nesciunt cupiditate non
-    quod culpa, veritatis mollitia modi, autem voluptatibus! Quae quas aspernatur modi ab officiis vero reprehenderit
-    velit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Id ducimus sunt distinctio facilis quos accusamus,
-    ullam illo dolorum harum consectetur nisi unde aperiam doloremque! Quibusdam quasi ducimus unde placeat mollitia.
+  <br>
+  <br>
+  <br>
+
+  <h2>Knowledge, Skills, and Abilities</h2>
+
+  <p>
+    Complex Problem Solving — Identify complex problems and review related information to develop and evaluate options
+    and implement solutions.
+    Critical Thinking — Use logic and reasoning to identify the strengths and weaknesses of alternative solutions,
+    conclusions or approaches to problems. <br>
+    Active Listening — Give full attention to what other people are saying, take time to understand the points being
+    made, ask questions as appropriate, and not interrupting at inappropriate times. <br>
+    Judgment and Decision Making — Consider the relative costs and benefits of potential actions to choose the most
+    appropriate one. <br>
+    Reading Comprehension — Understand written sentences and paragraphs in work related documents.
   </p>
-  <div class="parallax2"></div>
+
+  <br>
+  <br>
+  <br>
+
+  <h2>Education</h2>
+
+  <p>
+    Centennial High School, Peoria, AZ <br>
+    Expected Grad Date: May 2020 <br>
+    West-MEC Coding Program GPA: 4 <br>
+    Relevant Coursework: Computer Programming and Tech, Game Design and Development, AP Computer Science A.
+  </p>
+
+  <br>
+  <br>
+  <br>
+
+  <h2>Employment/Volunteer Activities</h2>
+
+  <p>
+    Uncle Sam's, Peoria, AZ <br>
+    7/2018 - 11/2018 <br>
+    Busser <br>
+    Responsibilities include: Clean tables, wash dishes, put away clean dishes/glasses, fill ice coolers.
+  </p>
 
   <!-- Scripts -->
 
