--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     }
   </style>
 
-  <!-- <header>
+  <header>
     <nav>
       <ul>
         <li><a href="index.html">About Me</a></li>
@@ -40,60 +40,66 @@
         <li><a href="index.html">Experience</a></li>
       </ul>
     </nav>
-  </header> -->
+  </header>
 
   <h1 id="name">Dylan J. Kelley</h1>
 
-  <h2>Personal Profile</h2>
+  <section>
 
-  <p>
-    Hardworking, methodical first year Coding student who is able to push through problems to find a solution and able
-    to talk and get along with various different people. Seeking the position of Web Developer.
-  </p>
+    <h2>Personal Profile</h2>
 
-  <br>
-  <br>
-  <br>
+    <p>
+      Hardworking, methodical first year Coding student who is able to push through problems to find a solution and
+      able
+      to talk and get along with various different people. Seeking the position of Web Developer.
+    </p>
 
-  <h2>Knowledge, Skills, and Abilities</h2>
+    <br>
+    <br>
+    <br>
 
-  <p>
-    Complex Problem Solving — Identify complex problems and review related information to develop and evaluate options
-    and implement solutions.
-    Critical Thinking — Use logic and reasoning to identify the strengths and weaknesses of alternative solutions,
-    conclusions or approaches to problems. <br>
-    Active Listening — Give full attention to what other people are saying, take time to understand the points being
-    made, ask questions as appropriate, and not interrupting at inappropriate times. <br>
-    Judgment and Decision Making — Consider the relative costs and benefits of potential actions to choose the most
-    appropriate one. <br>
-    Reading Comprehension — Understand written sentences and paragraphs in work related documents.
-  </p>
+    <h2>Knowledge, Skills, and Abilities</h2>
 
-  <br>
-  <br>
-  <br>
+    <p>
+      Complex Problem Solving — Identify complex problems and review related information to develop and evaluate
+      options
+      and implement solutions.
+      Critical Thinking — Use logic and reasoning to identify the strengths and weaknesses of alternative solutions,
+      conclusions or approaches to problems. <br>
+      Active Listening — Give full attention to what other people are saying, take time to understand the points being
+      made, ask questions as appropriate, and not interrupting at inappropriate times. <br>
+      Judgment and Decision Making — Consider the relative costs and benefits of potential actions to choose the most
+      appropriate one. <br>
+      Reading Comprehension — Understand written sentences and paragraphs in work related documents.
+    </p>
 
-  <h2>Education</h2>
+    <br>
+    <br>
+    <br>
 
-  <p>
-    Centennial High School, Peoria, AZ <br>
-    Expected Grad Date: May 2020 <br>
-    West-MEC Coding Program GPA: 4 <br>
-    Relevant Coursework: Computer Programming and Tech, Game Design and Development, AP Computer Science A.
-  </p>
+    <h2>Education</h2>
 
-  <br>
-  <br>
-  <br>
+    <p>
+      Centennial High School, Peoria, AZ <br>
+      Expected Grad Date: May 2020 <br>
+      West-MEC Coding Program GPA: 4 <br>
+      Relevant Coursework: Computer Programming and Tech, Game Design and Development, AP Computer Science A.
+    </p>
 
-  <h2>Employment/Volunteer Activities</h2>
+    <br>
+    <br>
+    <br>
 
-  <p>
-    Uncle Sam's, Peoria, AZ <br>
-    7/2018 - 11/2018 <br>
-    Busser <br>
-    Responsibilities include: Clean tables, wash dishes, put away clean dishes/glasses, fill ice coolers.
-  </p>
+    <h2>Employment/Volunteer Activities</h2>
+
+    <p>
+      Uncle Sam's, Peoria, AZ <br>
+      7/2018 - 11/2018 <br>
+      Busser <br>
+      Responsibilities include: Clean tables, wash dishes, put away clean dishes/glasses, fill ice coolers.
+    </p>
+
+  </section>
 
   <!-- Scripts -->
 
