Added Experience page
Added the experience page and added the content about my education and volunteer activities, and picked out a good background image for the experience page.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <ul>
         <li><a href="index.html">About Me</a></li>
         <li><a href="index.html">Home</a></li>
-        <li><a href="index.html">Experience</a></li>
+        <li><a href="experience.html">Experience</a></li>
       </ul>
     </nav>
   </header>
@@ -63,7 +63,7 @@
     <p>
       Complex Problem Solving — Identify complex problems and review related information to develop and evaluate
       options
-      and implement solutions.
+      and implement solutions. <br>
       Critical Thinking — Use logic and reasoning to identify the strengths and weaknesses of alternative solutions,
       conclusions or approaches to problems. <br>
       Active Listening — Give full attention to what other people are saying, take time to understand the points being
@@ -83,7 +83,9 @@
       Centennial High School, Peoria, AZ <br>
       Expected Grad Date: May 2020 <br>
       West-MEC Coding Program GPA: 4 <br>
-      Relevant Coursework: Computer Programming and Tech, Game Design and Development, AP Computer Science A.
+      Relevant Coursework: Computer Programming and Tech,
+      <br> Game Design and Development,
+      <br> AP Computer Science A.
     </p>
 
     <br>
