Experience Page Update
Removed the line breaks on the index page and added some styles to replace the spacing between paragraphs, also placed all the content within the experience page inside a section element so the same styles apply to it as they do on the index page.

--- a/experience.html
+++ b/experience.html
@@ -43,29 +43,29 @@
         </nav>
     </header>
 
-    <h2>Education</h2>
+    <h1 id="name">Experience</h1>
 
-    <p>
-        Centennial High School, Peoria, AZ <br>
-        Expected Grad Date: May 2020 <br>
-        West-MEC Coding Program GPA: 4 <br>
-        Relevant Coursework: Computer Programming and Tech,
-        <br> Game Design and Development,
-        <br> AP Computer Science A.
-    </p>
+    <section>
+        <h2>Education</h2>
 
-    <br>
-    <br>
-    <br>
+        <p>
+            Centennial High School, Peoria, AZ <br>
+            Expected Grad Date: May 2020 <br>
+            West-MEC Coding Program GPA: 4 <br>
+            Relevant Coursework: Computer Programming and Tech,
+            <br> Game Design and Development,
+            <br> AP Computer Science A.
+        </p>
 
-    <h2>Employment/Volunteer Activities</h2>
+        <h2>Employment/Volunteer Activities</h2>
 
-    <p>
-        Uncle Sam's, Peoria, AZ <br>
-        7/2018 - 11/2018 <br>
-        Busser <br>
-        Responsibilities include: Clean tables, wash dishes, put away clean dishes/glasses, fill ice coolers.
-    </p>
+        <p>
+            Uncle Sam's, Peoria, AZ <br>
+            7/2018 - 11/2018 <br>
+            Busser <br>
+            Responsibilities include: Clean tables, wash dishes, put away clean dishes/glasses, fill ice coolers.
+        </p>
+    </section>
 
     <!-- Scripts -->
 
