Experience Page Update
Added more content to the Experience page and added more styles so my education information is displayed appropriately.

--- a/experience.html
+++ b/experience.html
@@ -47,23 +47,34 @@
 
     <section>
         <h2>Education</h2>
+        <hr>
 
-        <p>
-            Centennial High School, Peoria, AZ <br>
-            Expected Grad Date: May 2020 <br>
-            West-MEC Coding Program GPA: 4 <br>
-            Relevant Coursework: Computer Programming and Tech,
-            <br> Game Design and Development,
-            <br> AP Computer Science A.
+        <img src="centennial_coyotes_logo.jpg" alt="Coyotes Logo" id="schoolLogo" />
+        <h3 id="schoolHeading">Centenial High School - Class of 2020</h3>
+
+        <p id="schoolCaption">
+            I am currently a Junior at Centennial High School in the graduating class of 2020. I have taken multiple
+            computer and technology classes as well as taken all dual enrollment opportunites to gain college credits.
+            I maintain my grades, keep up on assignments, turn in all my work, and I usually do pretty good on tests.
+            Overall, I love my school and enjoy being a student there.
         </p>
 
-        <h2>Employment/Volunteer Activities</h2>
+        <h2 class="xp">Experience</h2>
+        <hr class="xp">
 
-        <p>
-            Uncle Sam's, Peoria, AZ <br>
-            7/2018 - 11/2018 <br>
-            Busser <br>
-            Responsibilities include: Clean tables, wash dishes, put away clean dishes/glasses, fill ice coolers.
+        <h3 class="xp">Completed Coursework</h3>
+        <!-- Add a progress bar showing understanding of different languages -->
+
+        <h2 id="employment">Employment</h2>
+        <hr>
+
+        <img src="uncle_sams_logo.jpg" alt="Uncle Sam's Logo" id="jobLogo">
+        <h3 id="jobHeading"> Uncle Sam's - 7/2018-11/2018</h3>
+
+        <p id="jobCaption">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et laborum harum tempore praesentium. Iure
+            eveniet sapiente error aliquam laboriosam culpa similique eum optio impedit dolorem, tempora reprehenderit
+            ipsum ex libero?
         </p>
     </section>
 
