Experience Page Update
Added Volunteer service paragraph and updated the job caption.

--- a/experience.html
+++ b/experience.html
@@ -28,7 +28,6 @@
 
     <style>
         html {
-            /* background-color: rgb(68, 68, 68); */
             background-image: url(code_image.png);
             background-attachment: fixed;
             background-size: 100%;
@@ -66,20 +65,20 @@
 
         <h3 class="xp">Completed Coursework</h3>
 
-        <ul>
-            <li>Computer Programming and Tech</li>
-            <li>Game Design and Development</li>
-            <li>AP Computer Science A</li>
+        <ul class="xp">
+            <li class="xp">Computer Programming and Tech</li>
+            <li class="xp">Game Design and Development</li>
+            <li class="xp">AP Computer Science A</li>
         </ul>
 
         <br>
 
         <h3 class="xp">Coursework In Progress</h3>
 
-        <ul>
-            <li>Advanced Software Development H</li>
-            <li>Survey of Coding</li>
-            <li>Coding Fundamentals I</li>
+        <ul class="xp">
+            <li class="xp">Advanced Software Development H</li>
+            <li class="xp">Survey of Coding</li>
+            <li class="xp">Coding Fundamentals I</li>
         </ul>
 
         <!-- Progress Bar -->
@@ -131,20 +130,31 @@
         <h3 id="jobHeading"> Uncle Sam's - 7/2018-11/2018</h3>
 
         <p id="jobCaption">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et laborum harum tempore praesentium. Iure
-            eveniet sapiente error aliquam laboriosam culpa similique eum optio impedit dolorem, tempora reprehenderit
-            ipsum ex libero?
+            For my first job I became a busser for a resturaunt called Uncle Sam's. I found this job from a friend who
+            also worked there at the time. While working at Uncle Sam's I definitly picked up some work skills from
+            having to move fast and work hard. I bussed tables around the resturaunt, which thankfully wasn't too big,
+            then took the dishes back to the dishwasher, and then put the clean dishes back where they belong. I also
+            had to take out the trash, make sure there was enough ice in all the ice bins, and clean the beer glasses,
+            which could get to be quite a bit on Fridays and Saturdays.
         </p>
 
         <h2 id="volunteer">Volunteer Service</h2>
         <hr>
 
-        <h3 id="volunteerHeading">Falling Feathers</h3>
+        <img src="fallen_feathers_logo.jpg" alt="Fallen Feathers Logo" id="volunteerLogo" />
+        <h3 id="volunteerHeading">Fallen Feathers</h3>
+
+        <p id="volunteerSummary">To get my volunteer hours done at West-MEC, I volunteered at a bird rescue place
+            called Fallen Feathers,
+            where they have hundreds of birds that they take care of everyday. People are able to bring their birds
+            there if they are injured of if something is wrong with them. Fallen Feathers is an open volunteer place
+            and welcome people to help anytime. When I volunteered there I did various different things like feed the
+            birds, clean their cages, and sweep around the place. I also washed the food and water dishes and sometimes
+            moved things like bigger cages to places that they wanted.
+        </p>
     </section>
 
     <!-- Scripts -->
-
-
 
     ==============================================================================================================================
     <script src="js/vendor/modernizr-3.6.0.min.js"></script>
