Experience Page Update
Added a footer element and fixed the volunteer heading, also linked my school logo to their website and linked the job logo to the company's website and linked the volunteer logo to its website.

--- a/experience.html
+++ b/experience.html
@@ -30,7 +30,7 @@
         html {
             background-image: url(code_image.png);
             background-attachment: fixed;
-            background-size: 100%;
+            background-size: cover;
         }
     </style>
 
@@ -50,7 +50,8 @@
         <h2>Education</h2>
         <hr>
 
-        <img src="centennial_coyotes_logo.jpg" alt="Coyotes Logo" id="schoolLogo" />
+
+        <a href="https://www.peoriaunified.org/Centennial"><img src="centennial_coyotes_logo.jpg" alt="Coyotes Logo" id="schoolLogo" /></a>
         <h3 id="schoolHeading">Centennial High School - Class of 2020</h3>
 
         <p id="schoolCaption">
@@ -126,7 +127,7 @@
         <h2 id="employment">Employment</h2>
         <hr>
 
-        <img src="uncle_sams_logo.jpg" alt="Uncle Sam's Logo" id="jobLogo" />
+        <a href="https://unclesamsaz.com/"><img src="uncle_sams_logo.jpg" alt="Uncle Sam's Logo" id="jobLogo" /></a>
         <h3 id="jobHeading"> Uncle Sam's - 7/2018-11/2018</h3>
 
         <p id="jobCaption">
@@ -141,7 +142,7 @@
         <h2 id="volunteer">Volunteer Service</h2>
         <hr>
 
-        <img src="fallen_feathers_logo.jpg" alt="Fallen Feathers Logo" id="volunteerLogo" />
+        <a href="https://tempfallenfeathers.blog/"><img src="fallen_feathers_logo.jpg" alt="Fallen Feathers Logo" id="volunteerLogo" /></a>
         <h3 id="volunteerHeading">Fallen Feathers</h3>
 
         <p id="volunteerSummary">To get my volunteer hours done at West-MEC, I volunteered at a bird rescue place
@@ -153,6 +154,8 @@
             moved things like bigger cages to places that they wanted.
         </p>
     </section>
+
+    <footer>Dylan J. Kelley</footer>
 
     <!-- Scripts -->
 
