--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     html {
       background-image: url(space_background.jpg);
       background-attachment: fixed;
-      background-size: 100%;
+      background-size: cover;
     }
   </style>
 
@@ -90,6 +90,8 @@
     </p>
 
   </section>
+
+  <footer>Dylan J. Kelley</footer>
 
   <!-- Scripts -->
 
