--- a/experience.html
+++ b/experience.html
@@ -37,9 +37,10 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">About Me</a></li>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="aboutme.html">About Me</a></li>
                 <li><a href="experience.html">Experience</a></li>
+                <li><a href="projects.html">Projects</a></li>
             </ul>
         </nav>
     </header>
