--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <style>
     html {
-      background-image: url(space_background.jpg);
+      background-image: url(space_background2.jpg);
       background-attachment: fixed;
       background-size: cover;
     }
@@ -35,9 +35,10 @@
   <header>
     <nav>
       <ul>
-        <li><a href="index.html">About Me</a></li>
         <li><a href="index.html">Home</a></li>
+        <li><a href="aboutme.html">About Me</a></li>
         <li><a href="experience.html">Experience</a></li>
+        <li><a href="projects.html">Projects</a></li>
       </ul>
     </nav>
   </header>
