About Me Page Update
Added my school ID picture and a caption next to it saying my personal profile and then added my skills below.

--- a/aboutme.html
+++ b/aboutme.html
@@ -46,16 +46,41 @@
     <h1 id="name">About Me</h1>
 
     <section>
-        <h2>lorem ipsum</h2>
+        <h2>Personal Profile</h2>
         <hr>
 
-        <h3>lorem ipsum</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt quis harum dolores ea iure deleniti fuga
-            perspiciatis est doloribus, tempore beatae nam provident vel aspernatur earum consectetur sit nisi
-            necessitatibus! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis quasi iste ratione
-            sapiente impedit illum quibusdam doloribus id tempora! Delectus quos, ipsum provident sunt impedit omnis.
-            Blanditiis doloremque itaque voluptatem?</p>
+        <img src="dylan_id_photo.png" alt="Dylan J. Kelley" id="dylan" />
+        <h3 id="dylanHeading">About Me</h3>
+        <p id="dylanCaption">
+            My name is Dylan Kelley and I consider myself to be a hardworking, methodical student who is able to push
+            through problems to find a solution and able to talk and get along with various different people. I am a
+            first year Coding student at West-Mec Central Campus and a Junior at Centennial High School, trying to best
+            prepare myself for the future.</p>
+
+        <h2 id="skills">Skills</h2>
+        <hr>
+
+        <dl>
+            <dt>Complex Problem Solving</dt>
+            <dd>Identify complex problems and review related information to develop and evaluate
+                options
+                and implement solutions.</dd>
+            <dt>Critical Thinking</dt>
+            <dd>Use logic and reasoning to identify the strengths and weaknesses of alternative solutions,
+                conclusions or approaches to problems.</dd>
+            <dt>Active Listening</dt>
+            <dd>Give full attention to what other people are saying, take time to understand the points being made, ask
+                questions as appropriate, and not interrupting at inappropriate times. </dd>
+            <dt>Judgment and Decision Making</dt>
+            <dd>Consider the relative costs and benefits of potential actions to choose the most appropriate one.</dd>
+            <dt>Reading Comprehension</dt>
+            <dd>Understand written sentences and paragraphs in work related documents.</dd>
+        </dl>
+
+        <!-- Add a contact me section that expands to a modal pop-up window. -->
     </section>
+
+    <footer>Dylan J. Kelley</footer>
 
     <!-- Scripts -->
 
