--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 
   <h1 id="name">Dylan J. Kelley</h1>
 
+  <!-- Re-do homepage, change content and content placement. -->
   <section>
 
     <h2>Personal Profile</h2>
