--- a/projects.html
+++ b/projects.html
@@ -59,6 +59,8 @@
         <!-- Add a slideshow showing all the projects I've done. -->
     </section>
 
+    <footer>Dylan J. Kelley</footer>
+
     <!-- Scripts -->
 
     <script src="js/vendor/modernizr-3.6.0.min.js"></script>
